[package]
name = "JackCompiler"
version = "0.1.0"
authors = ["brs"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "jack_analyzer"
path = "src/jack_analyzer.rs"


[dependencies]
regex = {version="1.3.9", features=["pattern"]}
lazy_static="1.4.0"